--- a/w2/Assignment/calculator/app.json
+++ b/w2/Assignment/calculator/app.json
@@ -1,30 +1,20 @@
 {
+  "android": {
+    "package": "calculator - sonukr.",
+    "versionCode": "1.0.0",
+    "adaptiveIcon": {
+      "foregroundImage": "./assets/splash.png",
+      "backgroundColor": "#FFFFFF"
+    }
+  },
+  "extra": {
+    "eas": {
+      "projectId": "85bfa678-92bc-4900-b467-53cea7a49fa4"
+    }
+  },
   "expo": {
-    "name": "calculator",
-    "slug": "calculator",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "package": "com.sonukr1256.calculator"
     }
   }
 }
