--- a/w2/Assignment/Todo/app.json
+++ b/w2/Assignment/Todo/app.json
@@ -1,33 +1,20 @@
 {
+  "android": {
+    "package": "todo app",
+    "versionCode": "1.0.0",
+    "adaptiveIcon": {
+      "foregroundImage": "./assets/splash.png",
+      "backgroundColor": "black"
+    }
+  },
+  "extra": {
+    "eas": {
+      "projectId": "2956bb6b-2a5b-4853-8c1b-fe398bccde2b"
+    }
+  },
   "expo": {
-    "name": "Todo",
-    "slug": "Todo",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "package": "com.sonukr1256.todoasyncstorage"
     }
   }
 }
