--- a/w2/Assignment/TodoSqlLite/package.json
+++ b/w2/Assignment/TodoSqlLite/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "expo": "~47.0.12",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5"
