--- a/FolderStructure/ExpoToBareReactNative/app.json
+++ b/FolderStructure/ExpoToBareReactNative/app.json
@@ -21,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sonukr1256.ExpoToBareReactNative"
     },
     "web": {
       "favicon": "./assets/favicon.png"
