--- a/w3/Assignmnet/AdvanceNavigation/app.json
+++ b/w3/Assignmnet/AdvanceNavigation/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "NavigationDrawerUsingAnimated",
-    "slug": "NavigationDrawerUsingAnimated",
+    "name": "AdvanceNavigation",
+    "slug": "AdvanceNavigation",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,8 +21,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.sonukr1256.NavigationDrawerUsingAnimated"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
