--- a/w4/Assignmnet/AddPhotosPage/app.json
+++ b/w4/Assignmnet/AddPhotosPage/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "stepcount",
-    "slug": "stepcount",
+    "name": "AddPhotosPage",
+    "slug": "AddPhotosPage",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,8 +21,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "package": "com.sonukr1256.stepcount"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
