--- a/w4/Assignmnet/StepCount/package.json
+++ b/w4/Assignmnet/StepCount/package.json
@@ -9,15 +9,14 @@
   },
   "dependencies": {
     "expo": "~48.0.6",
-    "expo-sensors": "^12.1.1",
+    "expo-sensors": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-circular-progress-indicator": "^4.4.2",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^3.0.2",
-    "react-native-svg": "^13.8.0"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
